Acionei a página de perfil

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="/index.css">
     <title>Netflix</title>
 </head>
-<body>
+<body>  
     <a href="/index2.html"></a>
+    <a href="/index3.html"></a>
     <header>
         <div class="logo">
         <a href="#">
@@ -22,7 +23,7 @@
             <input type="email" placeholder="Email ou número de telefone">
             <input type="password" placeholder="senha">
             <a href="#">Esqueceu seu email ou senha? </a>
-            <a href="index2.html" class="btn">Entrar</a>
+            <a href="/index3.html" class="btn">Entrar</a>
         </form>
         <div class="support">
             <div class="remember">
