--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Netflix</title>
     <link rel="stylesheet" href="/index2.css">
 <body>
- 
+ <a href="/index.html"></a>
     <div class="nav" id="nav">
          <img src="img/netflix-logo.png" alt="" class="nav__logo">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/netflix-avatar.png" alt="" class="nav__avatar">
@@ -36,6 +36,7 @@
     <div class="row">
         <h2>NETFLIX ORIGINAL</h2>
         <div class="cartazes_de_linhas">
+       
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/smaal10.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/comedia9.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/ficção5.webp" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
