atualização da simulação de autenticação

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="login">
             <h2>Entrar</h2>
             <form class="box-input">
-            <input type="email" placeholder="Email ou número de telefone">
-            <input type="password" placeholder="senha">
+            <input id="email" type="email" placeholder="Email ou número de telefone">
+            <input id="senha" type="password" placeholder="senha">
             <a href="#">Esqueceu seu email ou senha? </a>
-            <a href="/index3.html" class="btn">Entrar</a>
+            <a href="#" class="btn" onclick="autenticar()">Entrar</a>
         </form>
         <div class="support">
             <div class="remember">
@@ -48,3 +48,5 @@
     </section>
 </body>
 </html>
+
+<script src="autenticar.js"></script>
