--- a/index2.html
+++ b/index2.html
@@ -37,8 +37,8 @@
         <h2>NETFLIX ORIGINAL</h2>
         <div class="cartazes_de_linhas">
        
-        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/smaal10.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande" onclick="modalToggle('fugadasgalinhas')">
-        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/comedia9.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande" onclick="modalToggle('ATLAS')" >
+        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/smaal10.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
+        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/comedia9.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande" onclick="modalToggle('fugadasgalinhas')" >
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/ficção5.webp" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/serie12.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/net.webp" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
