--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/serie12.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/net.webp" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/net4.webp" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
-        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/net6 (2).jpg alt=" class="cartazes_de_linha cartaz_de_linha_grande">
+        <img src="img/netflix-images-20240527T135535Z-001/netflix-images/net6 (2).jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/romance 3.jpeg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/serie1.jpg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
         <img src="img/netflix-images-20240527T135535Z-001/netflix-images/romance10.jpeg" alt="" class="cartazes_de_linha cartaz_de_linha_grande">
